<resources>
    <string name="app_name">VinsolProject</string>


    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="dash">-</string>

    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <string name="description">Description</string>

    <string name="submit">Submit</string>
    <string name="schedule_meeting">Schedule Company Meeting</string>
</resources>
