<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listBack"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_vector_prev"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/schedule_meeting"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/meeting_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_button_back"
                android:drawableRight="@drawable/ic_vector_down"
                android:text="@string/meeting_date"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/start_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_button_back"
                android:drawableRight="@drawable/ic_vector_down"
                android:text="@string/start_time"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/end_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_button_back"
                android:drawableRight="@drawable/ic_vector_down"
                android:text="@string/end_time"
                android:textColor="@color/secondaryText" />

            <EditText
                android:id="@+id/meeting_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_back"
                android:gravity="left"
                android:hint="@string/description"
                android:maxLines="5"
                android:minLines="5" />


            <TextView
                android:id="@+id/submit_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_back"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/progress_container" />
</RelativeLayout>