<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listBack"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_vector_prev"
                android:gravity="center"
                android:text="@string/prev"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                tools:text="THRUSDAY, 06-08-2015" />

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_vector_next"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/meeting_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            tools:listitem="@layout/item_meeting_list" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/schedule_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:text="@string/schedule_meeting"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <include layout="@layout/progress_container" />
</RelativeLayout>